--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
- <!DOCTYPE html>
-<html>
-  <head>
+<!DOCTYPE html>
+<html lang="fi" xml:lang="fi">
+
+<head>
     <title>Makea Safka Oy</title>
-	<link rel="stylesheet" href="css1.css">
-  </head>
-  <body background = background.jpg>
-	<div class="Header">
-		<header>Makea Safka Oy</header>
-	</div>
-	
-  </body>
+    <link rel="stylesheet" href="css1.css">
+</head>
+
+<body background=background.jpg>
+    <div class="header">
+        <header><img class="logo" src="logo.png" width="200" alt="logo">
+            <div class="header-right"><a class="active" href="sweetbox.html">Shop</a><a href="#">Other</a><a href="#">Policy</a></div>
+            <p1 class="text">The taste of Freedom</p1>
+        </header>
+    </div>
+
+    <div class="map">
+        <iframe src="https://yandex.com/map-widget/v1/?um=constructor%3A0b3b40468a3be909b6f7a482d14b1e0187e0dee875e0f92ac9a5a32f2d3f3d88&amp;source=constructor" width="500" height="400" frameborder="0"></iframe>
+    </div>    
+
+</body>
 </html>
