--- a/sweetbox.html
+++ b/sweetbox.html
@@ -6,12 +6,21 @@
 </head>
 <body>
 <div class="header">
-  <a href="#index.html" class="logo">Makea Safka OY</a>
+ <img class="logo" src="logo.png" width="105" alt="logo">
   <div class="header-right">
-    <a class="active" href="#index.html">Back</a>
+    <a class="active" href="index.html">Back</a>
     <a href="#">Other</a>
     <a href="#">Policy</a>
   </div>
 </div>
+<img class="safkaboximg" src="safkabox.png" alt="safkabox">
+	<button class="order">Order</button>
+	<p class="desc">  Makea Safka Box is a box of sweets with random sweets in it. <br>
+As soon as you receive the box you can take a part in the<br>
+1 in a 1000 chance lottery to win a PS4.<br>
+From the Makea Safka Box you can get: The Famous Domino's Milkshake<br>
+Fazer Christmas Special Chocolate, Skittles, Skittles 1998 edition<br>
+And many more...</p>
+	<p class="price">33€</p>
 </body>
 </html> 
