--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <title>Makea Safka Oy</title>
     <link rel="stylesheet" href="css1.css">
+    <style>
+        <link rel="stylesheet"href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"crossorigin="anonymous"><meta name="viewport"content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
+    </style>
 </head>
 
 <body background=background.jpg>
@@ -16,7 +20,8 @@
 
     <div class="map">
         <iframe src="https://yandex.com/map-widget/v1/?um=constructor%3A0b3b40468a3be909b6f7a482d14b1e0187e0dee875e0f92ac9a5a32f2d3f3d88&amp;source=constructor" width="500" height="400" frameborder="0"></iframe>
-    </div>    
+    </div>
 
 </body>
+
 </html>
