--- a/sweetbox.html
+++ b/sweetbox.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Makea Safka Sweetbox</title>
-<link rel="stylesheet" href="css2.css">
+    <title>Makea Safka Sweetbox</title>
+    <style>
+        <link rel="stylesheet"href="css2.css"><link rel="stylesheet"href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"crossorigin="anonymous"><meta name="viewport"content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
+    </style>
 </head>
+
 <body>
-<div class="header">
-  <a href="#index.html" class="logo">Makea Safka OY</a>
-  <div class="header-right">
-    <a class="active" href="#index.html">Back</a>
-    <a href="#">Other</a>
-    <a href="#">Policy</a>
-  </div>
-</div>
+    <div class="header">
+        <img class="logo" src="logo.png" width="105" alt="logo">
+        <div class="header-right">
+            <a class="active" href="index.html">Back</a>
+            <a href="#">Other</a>
+            <a href="#">Policy</a>
+        </div>
+    </div>
+    <img class="safkaboximg" src="safkabox.png" alt="safkabox">
+    <button class="order">Order</button><br /><br />
 </body>
-</html> 
+
+</html>
