--- a/sweetbox.html
+++ b/sweetbox.html
@@ -3,10 +3,7 @@
 
 <head>
     <title>Makea Safka Sweetbox</title>
-    <style>
-        <link rel="stylesheet"href="css2.css"><link rel="stylesheet"href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"crossorigin="anonymous"><meta name="viewport"content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-
-    </style>
+        <link rel="stylesheet"href="css2.css">
 </head>
 
 <body>
@@ -20,6 +17,13 @@
     </div>
     <img class="safkaboximg" src="safkabox.png" alt="safkabox">
     <button class="order">Order</button><br /><br />
+	<p class="desc">Makea Safka Box is a box of sweets with random sweets in it. <br>
+As soon as you receive the box you can take a part in the<br>
+1 in a 1000 chance lottery to win a PS4.<br>
+From the Makea Safka Box you can get: The Famous Domino's Milkshake<br>
+Fazer Christmas Special Chocolate, Skittles, Skittles 1998 edition<br>
+And many more... </p>
+<p class="price">16$</p>
 </body>
 
 </html>
