--- a/index.html
+++ b/index.html
@@ -4,20 +4,28 @@
 <head>
     <title>Makea Safka Oy</title>
     <link rel="stylesheet" href="css1.css">
+    <style>
+        <link rel="stylesheet"href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"crossorigin="anonymous"><meta name="viewport"content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
+    </style>
 </head>
 
-<body background=background.jpg>
+<body>
     <div class="header">
         <header><img class="logo" src="logo.png" width="200" alt="logo">
             <div class="header-right"><a class="active" href="sweetbox.html">Shop</a><a href="#">Other</a><a href="#">Policy</a></div>
-            <p1 class="text">The taste of Freedom</p1>
         </header>
     </div>
+
+		<img class="poster1" src="poster1.png" alt="post1">
+	<img class="poster2" src="poster2.png" alt="post2">
 
     <div class="map">
         <iframe src="https://yandex.com/map-widget/v1/?um=constructor%3A0b3b40468a3be909b6f7a482d14b1e0187e0dee875e0f92ac9a5a32f2d3f3d88&amp;source=constructor" width="500" height="400" frameborder="0"></iframe>
     </div>
 
+	<img class="finlayson" src="finlayson.jpg" alt="post3">
+	
 </body>
 
 </html>
