--- a/indexfi.html
+++ b/indexfi.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xml:lang="en">
+<html lang="fi" xml:lang="fi">
 
 <head>
     <title>Makea Safka Oy</title>
@@ -12,19 +12,15 @@
 <body>
     <div class="header">
         <header><img class="logo" src="logo.png" width="200" alt="logo">
-            <div class="header-right">
-			<a href="indexfi.html">Suomenna</a>
-			<a class="active" href="sweetbox.html">Shop</a>
-			<a href="about.html">About</a>
-			<a href="policy.html">Policy</a></div>
+            <div class="header-right"><a class="active" href="sweetboxfi.html">Kauppa</a><a href="aboutfi.html">Meista</a><a href="policyfi.html">Ehdot</a></div>
         </header>
     </div>
     <img class="poster1" src="poster1.png" alt="post1">
-    <p class="text1">The Famous Domino's Milkshake, <br>
-Fazer Christmas Special Chocolate,<br> Skittles, Skittles 1998 edition<br>
-And many more products are 20% off For the whole of November.</p>
+    <p class="text1">Kuuluisa Domino's pirtelo, <br>
+Fazer Christmas Special suklaa,<br> Skittles, Skittles 1998 edition<br>
+Ja moni muuta tuotetta ovat 20%:n alennuksessa koko lokakuun ajan.</p>
     <img class="poster2" src="poster2.png" alt="post2">
-    <p class="text2">The Domino shake is our original milkshake</p>
+    <p class="text2">Domino pirtelo on meidan suosituin tuete.</p>
     
 
     <div class="map">
@@ -32,7 +28,7 @@ And many more products are 20% off For the whole of November.</p>
     </div>
 
     <img class="finlayson" src="finlayson.jpg" alt="post3">
-	<p class="text4">Our store is located next to Finlayson in Tampere</p>
+	<p class="text4">Kauppamme sijaitsee Finlaysonin vieressä, keskusorilla</p>
 
 </body>
 
