--- a/sweetbox.html
+++ b/sweetbox.html
@@ -4,15 +4,17 @@
 <head>
     <title>Makea Safka Sweetbox</title>
         <link rel="stylesheet"href="css2.css">
+		<link rel="shortcut icon" type="image/png" href="logo.png" /> 
 </head>
 
 <body>
     <div class="header">
         <img class="logo" src="logo.png" width="105" alt="logo">
         <div class="header-right">
+		<a href="sweetboxfi.html">Suomenna</a>
             <a class="active" href="index.html">Back</a>
-            <a href="#">Other</a>
-            <a href="#">Policy</a>
+            <a href="about.html">About</a>
+            <a href="policy.html">Policy</a>
         </div>
     </div>
     <img class="safkaboximg" src="safkabox.png" alt="safkabox">
