--- a/about.html
+++ b/about.html
@@ -1,4 +1,5 @@
 <html>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
 <title>Makea Safka About</title>
  <link rel="stylesheet" href="css3.css">
@@ -20,5 +21,8 @@
 	In the era of healthy eating, 5 Euro smoothies,<br>
 	and expensive k-Market salads, we present a store<br>
 	That makes sure that you keep your life sweet...<br>
+	We have stores all over Finland, and our main office is in<br>
+	Tampere. Enjoy the sweets!<br>
 	</p>
+	<img class="candy" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/10/Candy_in_Damascus.jpg/1200px-Candy_in_Damascus.jpg" alt="candy">
 </body>
