--- a/indexfi.html
+++ b/indexfi.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fi" xml:lang="fi">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
     <title>Makea Safka Oy</title>
@@ -12,15 +13,15 @@
 <body>
     <div class="header">
         <header><img class="logo" src="logo.png" width="200" alt="logo">
-            <div class="header-right"><a class="active" href="sweetboxfi.html">Kauppa</a><a href="aboutfi.html">Meista</a><a href="policyfi.html">Ehdot</a></div>
+            <div class="header-right"><a class="active" href="sweetbox.html">Shop</a><a href="about.html">About</a><a href="policy.html">Policy</a></div>
         </header>
     </div>
     <img class="poster1" src="poster1.png" alt="post1">
-    <p class="text1">Kuuluisa Domino's pirtelo, <br>
+    <p class="text1">Kuuluisa Domino's pirtelö, <br>
 Fazer Christmas Special suklaa,<br> Skittles, Skittles 1998 edition<br>
 Ja moni muuta tuotetta ovat 20%:n alennuksessa koko lokakuun ajan.</p>
     <img class="poster2" src="poster2.png" alt="post2">
-    <p class="text2">Domino pirtelo on meidan suosituin tuete.</p>
+    <p class="text2">Domino pirtelö on meidän suosituin tuete.</p>
     
 
     <div class="map">
