--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xml:lang="en">
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
     <title>Makea Safka Oy</title>
     <link rel="stylesheet" href="css1.css">
     <style>
-        <link rel="stylesheet"href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"crossorigin="anonymous"><meta name="viewport"content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     </style>
 </head>
 
@@ -20,11 +19,11 @@
         </header>
     </div>
     <img class="poster1" src="poster1.png" alt="post1">
-    <p class="text1">The Famous Domino's Milkshake, <br>
+    <p class="text1" style="font-size:1vw;">The Famous Domino's Milkshake, <br>
 Fazer Christmas Special Chocolate,<br> Skittles, Skittles 1998 edition<br>
 And many more products are 20% off For the whole of November.</p>
     <img class="poster2" src="poster2.png" alt="post2">
-    <p class="text2">The Domino shake is our original milkshake</p>
+    <p class="text2" style="font-size:1vw;">The Domino shake is our original milkshake</p>
     
 
     <div class="map">
@@ -32,7 +31,7 @@ And many more products are 20% off For the whole of November.</p>
     </div>
 
     <img class="finlayson" src="finlayson.jpg" alt="post3">
-	<p class="text4">Our store is located next to Finlayson in Tampere</p>
+	<p class="text4" style="font-size:1vw;">Our store is located next to Finlayson in Tampere</p>
 
 </body>
 
