--- a/aboutfi.html
+++ b/aboutfi.html
@@ -1,5 +1,5 @@
-<html xml:lang="fi" lang="fi">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html  lang="fi" xml:lang="fi">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <head>
 <title>Makea Safka About</title>
  <link rel="stylesheet" href="css3.css">
@@ -15,13 +15,13 @@
         </div>
     </div>
 	<p class="about">
-	Olemme jattilainen epaterveellinen syominen yritys: <br>
+	Olemme iso epäterveellisen syömisen yritys: <br>
 Makea Safka OY <br>
-Terveellisen syomisen aikakaudella - viiden euron smoothie, <br>
-ja kalliita k-market-salaatteja, esittelemme myymalan<br>
-Joka varmistaa, etta pidat elamasi makea... <br>
-Meilla on myymaloita koko Suomessa, ja meidan paa konttori<br>
-On Tamperessa. Nauti Herkuista!<br>
+Terveellisen syömisen aikakaudella - viiden euron smoothien, <br>
+ja kalliiden k-market-salaattien, esittelemme myymälän<br>
+Joka varmistaa, etta pidät elamasi makeana... <br>
+Meillä on myymälöitä koko Suomessa, ja meidän pääkonttori<br>
+On Tampereella. Nauti Herkuista!<br>
 	</p>
 	<img class="candy" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/10/Candy_in_Damascus.jpg/1200px-Candy_in_Damascus.jpg" alt="candy">
 </body>
