--- a/sweetboxfi.html
+++ b/sweetboxfi.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="fi" xml:lang="fi">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <head>
     <title>Makea Safka Sweetbox</title>
         <link rel="stylesheet"href="css2.css">
@@ -12,17 +12,17 @@
         <img class="logo" src="logo.png" width="105" alt="logo">
         <div class="header-right">
             <a class="active" href="indexfi.html">Takaisin</a>
-            <a href="aboutfi.html">Meista</a>
+            <a href="aboutfi.html">Meistä</a>
             <a href="policyfi.html">Ehdot</a>
         </div>
     </div>
     <img class="safkaboximg" src="safkabox.png" alt="safkabox">
     <button class="order">Tilaa</button><br /><br />
 	<p class="desc">Makea Safka Box on laatikko makeisia, joissa on satunnaisia ​​makeisia. <br>
-Heti kun saat laatikon, voit osallistua kilpailuun <br>
-1 in 1000 mahdollisessa voittaa PS4 <br>
-Makea Safka Boxista voit saada: Famous Domino's Milkshake <br>
-Fazer Christmas Special Chocolate, Skittles, Skittles 1998 Special Edition<br>
+Heti kun saat laatikon, voit osallistua kilpailuun jossa on,<br>
+1 in 1000 mahdollisuus voittaa PS4 <br>
+Makea Safka Boxista voit saada: Kuuluisan Domino's Milkshaken <br>
+Fazer Christmas Special suklaata, Skittles, Skittles 1998 Special Edition<br>
 Ja paljon muuta...</p>
 <p class="price">16$</p>
 </body>
