--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
-<html>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en" xml:lang="en">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <head>
 <title>Makea Safka About</title>
  <link rel="stylesheet" href="css3.css">
