--- a/indexfi.html
+++ b/indexfi.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="fi" xml:lang="fi">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
 <head>
     <title>Makea Safka Oy</title>
@@ -13,7 +13,7 @@
 <body>
     <div class="header">
         <header><img class="logo" src="logo.png" width="200" alt="logo">
-            <div class="header-right"><a class="active" href="sweetbox.html">Shop</a><a href="about.html">About</a><a href="policy.html">Policy</a></div>
+            <div class="header-right"><a class="active" href="sweetboxfi.html">Kauppa</a><a href="aboutfi.html">Meistä</a><a href="policyfi.html">Ehdot</a></div>
         </header>
     </div>
     <img class="poster1" src="poster1.png" alt="post1">
