--- a/policy.html
+++ b/policy.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en" xml:lang="en">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <head>
     <meta charset="UTF-8">
     <title>Makea Safka Policy</title>
