--- a/policyfi.html
+++ b/policyfi.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="fi" xml:lang="fi">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <head>
     <meta charset="UTF-8">
     <title>title</title>
@@ -9,9 +9,9 @@
   <body>
 	<div class="header">
         <header><img class="logo" src="logo.png" width="200" alt="logo">
-            <div class="header-right"><a class="active" href="sweetbox.html">Shop</a><a href="about.html">About</a><a href="index.html">Back</a></div>
+            <div class="header-right"><a class="active" href="sweetboxfi.html">Kauppa</a><a href="aboutfi.html">Meistä</a><a href="indexfi.html">Takaisin</a></div>
         </header>
     </div>
-	<p class="text3">Meillä ei ole oikeuksia mihinkään tällä sivulla,<br>paitsi että kaikki koodi on ryhmämme jäsenien kirjoittamaa,<br> tämä on vain koulu projekti :)<br> - Eetu, Danila, Ali and Kaarlo
+	<p class="text3">Meillä ei ole oikeuksia mihinkään tällä sivulla,<br>paitsi että kaikki koodi on ryhmämme jäsenien kirjoittamaa,<br> tämä on vain koulu projekti :)<br> - Eetu, Danila, Ali ja Kaarlo
   </body>
 </html>
