--- a/sweetbox.html
+++ b/sweetbox.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en" xml:lang="en">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <head>
     <title>Makea Safka Sweetbox</title>
         <link rel="stylesheet"href="css2.css">
