--- a/indexfi.html
+++ b/indexfi.html
@@ -16,7 +16,7 @@
     <img class="poster1" src="poster1.png" alt="post1">
     <p class="text1">Kuuluisa Domino's pirtelö, <br>
 Fazer Christmas Special suklaa,<br> Skittles, Skittles 1998 edition<br>
-Ja moni muuta tuotetta ovat 20%:n alennuksessa koko lokakuun ajan.</p>
+Ja moni muuta tuotetta ovat 20%:n alennuksessa koko marraskuun ajan.</p>
     <img class="poster2" src="poster2.png" alt="post2">
     <p class="text2">Domino pirtelö on meidän suosituin tuete.</p>
     
