--- a/about.html
+++ b/about.html
@@ -5,13 +5,21 @@
     <link rel="stylesheet" href="css3.css">
     <link rel="shortcut icon" type="image/png" href="logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <script type="text/javascript">
+        <!--
+        if (screen.width <= 699) {
+            document.location = "indexm.html";
+        }
+        //-->
+
+    </script>
 </head>
 
 <body>
     <div class="header">
         <img class="logo" src="logo.png" width="105" alt="logo">
         <div class="header-right">
-            <a href="aboutfi.html">Suomenna</a>
+            <a href="aboutfi.html">Suomeksi</a>
             <a class="active" href="index.html">Back</a>
             <a href="sweetbox.html">Shop</a>
             <a href="policy.html">Policy</a>
