--- a/indexfi.html
+++ b/indexfi.html
@@ -5,6 +5,14 @@
     <title>Makea Safka Oy</title>
     <link rel="stylesheet" href="css1.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <script type="text/javascript">
+        <!--
+        if (screen.width <= 699) {
+            document.location = "indexmfi.html";
+        }
+        //-->
+
+    </script>
 </head>
 
 <body>
@@ -15,18 +23,18 @@
     </div>
     <img class="poster1" src="poster1.png" alt="post1">
     <p class="text1">Kuuluisa Domino's pirtelö, <br>
-Fazer Christmas Special suklaa,<br> Skittles, Skittles 1998 edition<br>
-Ja moni muuta tuotetta ovat 20%:n alennuksessa koko marraskuun ajan.</p>
+        Fazer Christmas Special suklaa,<br> Skittles, Skittles 1998 edition<br>
+        Ja moni muuta tuotetta ovat 20%:n alennuksessa koko marraskuun ajan.</p>
     <img class="poster2" src="poster2.png" alt="post2">
     <p class="text2">Domino pirtelö on meidän suosituin tuete.</p>
-    
+
 
     <div class="map">
         <iframe src="https://yandex.com/map-widget/v1/?um=constructor%3A0b3b40468a3be909b6f7a482d14b1e0187e0dee875e0f92ac9a5a32f2d3f3d88&amp;source=constructor" width="500" height="400" frameborder="0"></iframe>
     </div>
 
     <img class="finlayson" src="finlayson.jpg" alt="post3">
-	<p class="text4">Kauppamme sijaitsee Finlaysonin vieressä, keskusorilla</p>
+    <p class="text4">Kauppamme sijaitsee Finlaysonin vieressä, keskusorilla</p>
 
 </body>
 
