--- a/aboutfi.html
+++ b/aboutfi.html
@@ -5,6 +5,14 @@
     <link rel="stylesheet" href="css3.css">
     <link rel="shortcut icon" type="image/png" href="logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <script type="text/javascript">
+        <!--
+        if (screen.width <= 699) {
+            document.location = "indexmfi.html";
+        }
+        //-->
+
+    </script>
 </head>
 
 <body>
