--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" xml:lang="en">
+
 <head>
     <title>Makea Safka Oy</title>
     <link rel="stylesheet" href="css1.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <script type="text/javascript">
+        <!--
+        if (screen.width <= 699) {
+            document.location = "indexm.html";
+        }
+        //-->
+
+    </script>
 </head>
 
 <body>
