--- a/policy.html
+++ b/policy.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" xml:lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8">
     <title>Makea Safka Policy</title>
     <link rel="stylesheet" href="css1.css">
     <link rel="shortcut icon" type="image/png" href="logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <script type="text/javascript">
+        <!--
+        if (screen.width <= 699) {
+            document.location = "policym.html";
+        }
+        //-->
+
+    </script>
 </head>
 
 <body>
@@ -20,4 +29,5 @@
     </div>
     <p class="text3">We don't have rights for anything this website contains,<br>except all the code is original and written by our group members,<br> this is just a school project :)<br> Best regards Eetu, Danila, Ali and Kaarlo
 </body>
+
 </html>
