--- a/policyfi.html
+++ b/policyfi.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="fi" xml:lang="fi">
-  <head>
+
+<head>
     <meta charset="UTF-8">
     <title>title</title>
     <link rel="stylesheet" href="css1.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <script type="text/javascript">
+        <!--
+        if (screen.width <= 699) {
+            document.location = "policymfi.html";
+        }
+        //-->
+
+    </script>
 </head>
 
 <body>
@@ -15,4 +24,5 @@
     </div>
     <p class="text3">Meillä ei ole oikeuksia mihinkään tällä sivulla,<br>paitsi että kaikki koodi on ryhmämme jäsenien kirjoittamaa,<br> tämä on vain koulu projekti :)<br> - Eetu, Danila, Ali ja Kaarlo
 </body>
+
 </html>
