--- a/sweetboxfi.html
+++ b/sweetboxfi.html
@@ -6,6 +6,14 @@
     <link rel="stylesheet" href="css2.css">
     <link rel="shortcut icon" type="image/png" href="logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <script type="text/javascript">
+        <!--
+        if (screen.width <= 699) {
+            document.location = "safkaboxmfi.html";
+        }
+        //-->
+
+    </script>
 </head>
 
 <body>
