--- a/indexmfi.html
+++ b/indexmfi.html
@@ -90,7 +90,7 @@
             <div class="col-md-4 mb-4">
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item">
-                        <a class="nav-link active" href="safkabox.html">Kauppa</a>
+                        <a class="nav-link active" href="safkaboxmfi.html">Kauppa</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="indexmfi.html">Tietoa Meistä</a>
