--- a/indexmfi.html
+++ b/indexmfi.html
@@ -51,7 +51,7 @@
                         Joka varmistaa, etta pidät elamasi makeana...
                         Meillä on myymälöitä koko Suomessa, ja meidän pääkonttori
                         On Tampereella. Nauti Herkuista!</p>
-                    <a class="btn btn-lg btn-primary" href="indexmfi" role="button">Lisätietoja Meistä &raquo;</a>
+                    <a class="btn btn-lg btn-primary" href="indexmfi.html" role="button">Lisätietoja Meistä &raquo;</a>
                 </div>
             </div>
         </div>
@@ -69,12 +69,12 @@
                     <div class="col-md">
                         <h3 class="display-4">Kaikki tuotteet ovat 20%:n alennuksessa koko marraskuun ajan</h3>
                         <img class="poster2m" src="poster2.png" width="400" height="400" alt="post2">
-                        <a href="safkabox.html" class="btn btn-primary">Kauppa</a>
+                        <a href="safkaboxmfi.html" class="btn btn-primary">Kauppa</a>
                     </div>
                     <div class="col-md">
                         <h3 class="display-4">Meidän Suosituin Tuote</h3>
                         <img class="poster1m" src="poster1.png" width="400" height="400" alt="post1">
-                        <a href="safkabox.html" class="btn btn-primary">Kauppa</a>
+                        <a href="safkaboxmfi.html" class="btn btn-primary">Kauppa</a>
                     </div>
                     <div class="col-md">
                         <h3 class="display-4">Missä Sijaitsemme</h3>
